--- a/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
+++ b/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
@@ -57,9 +57,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="MainGame.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MainScene.cs" />
+    <Compile Include="GameController\PlayerController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -84,6 +86,15 @@
       <Link>libSDL2-2.0.0.dylib</Link>
       <Kind>Static</Kind>
     </NativeReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\3rd\Nez.Portable\Nez.csproj">
+      <Project>{60B7197D-D0D5-405C-90A2-A56903E9B039}</Project>
+      <Name>Nez</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="GameController\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
