玩家移动模块 输入功能实现

--- a/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
+++ b/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BattleModule\Battle.cs" />
     <Compile Include="Utils\MapLoader.cs" />
     <Compile Include="Utils\TextureCacheContext.cs" />
+    <Compile Include="GameController\PlayerInformation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
