--- a/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
+++ b/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
@@ -72,6 +72,7 @@
     <Compile Include="GameController\PlayerInformation.cs" />
     <Compile Include="GameController\Build\BuildController.cs" />
     <Compile Include="GameController\Build\BuilderFollow.cs" />
+    <Compile Include="Utils\LayerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
