--- a/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
+++ b/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
@@ -57,22 +57,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainGame.cs" />
-    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MainScene.cs" />
-    <Compile Include="GameController\PlayerController.cs" />
-    <Compile Include="ResourcesManager\EntityObjectPool.cs" />
-    <Compile Include="ResourcesManager\ResourcesManager.cs" />
-    <Compile Include="Utils\Globals.cs" />
-    <Compile Include="GameController\MapController.cs" />
-    <Compile Include="BattleModule\Battle.cs" />
-    <Compile Include="Utils\MapLoader.cs" />
-    <Compile Include="Utils\TextureCacheContext.cs" />
-    <Compile Include="GameController\PlayerInformation.cs" />
-    <Compile Include="GameController\Build\BuildController.cs" />
-    <Compile Include="GameController\Build\BuilderFollow.cs" />
-    <Compile Include="Utils\LayerManager.cs" />
+    <Compile Include="Src\BattleModule\Battle.cs" />
+    <Compile Include="Src\GameController\Build\BuildController.cs" />
+    <Compile Include="Src\GameController\Build\BuilderFollow.cs" />
+    <Compile Include="Src\GameController\MapController.cs" />
+    <Compile Include="Src\GameController\PlayerController.cs" />
+    <Compile Include="Src\GameController\PlayerInformation.cs" />
+    <Compile Include="Src\ResourcesManager\EntityObjectPool.cs" />
+    <Compile Include="Src\ResourcesManager\ResourcesManager.cs" />
+    <Compile Include="Src\Utils\Globals.cs" />
+    <Compile Include="Src\Utils\LayerManager.cs" />
+    <Compile Include="Src\Utils\MapLoader.cs" />
+    <Compile Include="Src\Utils\TextureCacheContext.cs" />
+    <Compile Include="Src\Main.cs" />
+    <Compile Include="Src\MainGame.cs" />
+    <Compile Include="Src\MainScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -105,9 +105,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="GameController\" />
-    <Folder Include="BattleModule\" />
-    <Folder Include="GameController\Build\" />
+    <Folder Include="Src\" />
+    <Folder Include="Src\BattleModule\" />
+    <Folder Include="Src\GameController\" />
+    <Folder Include="Src\ResourcesManager\" />
+    <Folder Include="Src\Utils\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
