--- a/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
+++ b/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Src\MainGame.cs" />
     <Compile Include="Src\MainScene.cs" />
     <Compile Include="Src\Utils\XMLSerialize.cs" />
+    <Compile Include="Src\UI\UIBase.cs" />
+    <Compile Include="Src\UI\GameWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -108,6 +110,7 @@
     <Folder Include="Src\GameController\" />
     <Folder Include="Src\ResourcesManager\" />
     <Folder Include="Src\Utils\" />
+    <Folder Include="Src\UI\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3rd\Nez.Portable\Nez.csproj">
