提交一个UI测试用例（走出屏幕会出现bug）

--- a/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
+++ b/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Src\Utils\XMLSerialize.cs" />
     <Compile Include="Src\UI\UIBase.cs" />
     <Compile Include="Src\UI\GameWindow.cs" />
+    <Compile Include="Src\UI\UIManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
