vs 2017 to vs 2019

--- a/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
+++ b/MonoGame_Initialize_Tutorial/MonoGame_Initialize_Tutorial.MacOS.csproj
@@ -112,6 +112,7 @@
     <Folder Include="Src\ResourcesManager\" />
     <Folder Include="Src\Utils\" />
     <Folder Include="Src\UI\" />
+    <Folder Include="Src\Editor\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3rd\Nez.Portable\Nez.csproj">
